# my-little-video-player

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  init.sh
example/: audio_renderer_example.cpp  audio_resampler_example.cpp  decoder_example.cpp  demuxer_example.cpp  log_example.cpp  video_converter_example.cpp  video_renderer_example.cpp
lib/ffmpeg/: CMakeLists.txt
lib/sdl2/: CMakeLists.txt
src/: audio_buffer.cpp  audio_buffer.h  audio_renderer.cpp  audio_renderer.h  audio_resampler.cpp  audio_resampler.h  decoder.cpp  decoder.h  demuxer.cpp  demuxer.h  log.cpp  log.h  main.cpp  media_queue.h  task_queue.h  timer.cpp  timer.h  video_converter.cpp  video_converter.h  video_player.cpp  video_player.h  video_renderer.cpp  video_renderer.h
