CMAKE_MINIMUM_REQUIRED(VERSION 3.14)
PROJECT(ffmpeg)

FIND_PACKAGE(PkgConfig REQUIRED)

PKG_CHECK_MODULES(AVCODEC REQUIRED IMPORTED_TARGET libavcodec)
PKG_CHECK_MODULES(AVFORMAT REQUIRED IMPORTED_TARGET libavformat)
PKG_CHECK_MODULES(AVFILTER REQUIRED IMPORTED_TARGET libavfilter)
PKG_CHECK_MODULES(AVDEVICE REQUIRED IMPORTED_TARGET libavdevice)
PKG_CHECK_MODULES(AVUTIL REQUIRED IMPORTED_TARGET libavutil)
PKG_CHECK_MODULES(SWRESAMPLE REQUIRED IMPORTED_TARGET libswresample)
PKG_CHECK_MODULES(SWSCALE REQUIRED IMPORTED_TARGET libswscale)

ADD_LIBRARY(ffmpeg INTERFACE IMPORTED GLOBAL)

TARGET_LINK_LIBRARIES(ffmpeg INTERFACE
  PkgConfig::AVCODEC
  PkgConfig::AVFORMAT
  PkgConfig::AVFILTER
  PkgConfig::AVDEVICE
  PkgConfig::AVUTIL
  PkgConfig::SWRESAMPLE
  PkgConfig::SWSCALE)
